# Plague-InGG

./: .env.example  .gitignore  .pip.conf  AGENT_ROADMAP.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISH.md  README.md  llm_settings.py  main.py  pyproject.toml  requirements.txt  run  run.sh
.cursor/plans/: blueprint_integration_plan_503834d0.plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
evolution/: metrics.md
kernel/: core.py
memory/: evolution_report.md  rag.py
scripts/: autonomous_loop.py  capability_benchmark.py  daily_reflection.py  discovery_runner.py  evaluator.py  evolution_runner.py  index_recall.py  pre_launch_check.py  run_tests_runner.py  self_test.py  sleep_consolidation.py
seed/: consciousness_daemon.py  constitution.md  dao.md  goals.md  identity.md  llm.py  loop.py  main.py  memory_utils.py  metrics.py  pyproject.toml  rag.py  router.py  self_improve.py  telegram_main.py  tools.py  tools_registry.py
seed/prompts/: ENTRY.md  SEED.md.bak
seed/tests/: test_capability_benchmark.py  test_memory_utils.py  test_tools.py
tests/: test_constitution_prompt.py  test_dao_prompt.py  test_kernel_tool_cap.py  test_llm_settings.py  test_llm_usage_log.py  test_self_improve.py  test_shell_policy.py  test_tools_smoke.py  test_write_shrink_str_replace.py
tools/: analyzer.py  automation_tool.py  brave_search.py  create_tool.py  explorer.py  list_dir.py  memory_manager.py  read_file.py  reflection_tool.py  remember.py  self_improve.py  shell.py  str_replace_file.py  write_file.py
