[project]
name = "ekaterina-v2"
version = "0.0.1"
description = "Ekaterina v2 — self-evolving agent (Variant C)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pytest>=8.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=21.0",
    "chromadb>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["seed/tests", "tests"]
pythonpath = [".", "seed"]
